Updating generated html. M    html/hive.css M    html/Watchers.html M    html/mail.html M    html/PatConnectors.html M    html/HiveTraits.html M    html/CreatingTraits.html M    html/exec.html M    html/pat.html M    html/my.html M    html/Meta.html M    html/Hive-case2.html M    html/server.png M    html/Hive-case4.html M    html/i.html M    html/fetch.html M    html/urlwatch.html M    html/Hive.html A    html/PageHead.html M    html/fswatch.html M    html/QuickTutorial.html M    html/SelectFunctions.html M    html/mailwatch.html M    html/Procedures.html M    html/keeper.html M    html/CaseStudies.html M    html/sys.html M    html/echo.html M    html/file.html M    html/PatTool.html M    html/PatExamples.html M    html/Pat.html M    html/FrontPage.html M    html/Hive-case1.html M    html/Triggers.html A    html/PageTail.html M    html/Hive-case3.html M    html/env.html A    html/Help.html A    html/Short Invocation.html D    html/int.html D    html/hive.html M    html/remote.html M    html/me.html M    html/cron.html M    html/command-flow.png D    html/html.html M    html/Query.html M    html/watch.html M    html/Cat.html M    html/Keeper.html

--- a/html/hive.css
+++ b/html/hive.css
@@ -1,97 +1,17 @@
-/* main  */
-body, td {
-font-family: sans-serif, verdana;
-font-size: 10pt;
-color: #999999;
-background-color: black;
-}
-
-tt, pre {
-font-family: monospace;
-}
-
-a {
-text-decoration: none;
-color: #5EB9FF;
-color: #4E88AA;
-}
-
-a:active {
-text-decoration: none;
-color: #4E88AA;
-}
-
-a:visited {
-text-decoration: none;
-color: #4E88AA;
-}
-
-a:hover {
-color: #FFFFFF;
-}
-
-a.up {
-text-decoration: none;
-font-weight: bold;
-color: #EEEEEE;
-}
-
-a.up:hover {
-text-decoration: none;
-font-weight: bold;
-color: #FFFFFF;
-}
-
-a.down {
-text-decoration: none;
-color: #AAAAAA;
-}
-
-a.down:hover {
-text-decoration: none;
-color: #FFFFFF;
-}
-
-.boxed {
-border: solid white 1px;
-background-color: #111111;
-}
-
-.noborder {
-border: 0px;
-}
-
-.bottom {
-font-size: 7pt;
-text-align: right;
-margin-right: 10;
-margin-top: -5;
-}
-
-h1 {
-font-size: 12pt;
-font-weight: normal;
-text-align: center;
-}
-
-h2 {
-font-size: 10pt;
-font-weight: bold;
-}
-
 .body {
-    color: white;
+/*X    color: white;*/
 }
 .code {
     /*color:#cccccc;*/
     /*color: #D16587;*/
     color: #806D7E;
-    background:black;
+    /*background:black;*/
+    /*background-color: #efefef;*/
 }
 .term {
-    color:#cccccc;
+    color:#191970;
     /*color: #D16587;*/
-    background:black;
+    /*background:black;*/
 }
 A {color: #488AC7; text-decoration: none; } 
 A:HOVER {color : #ffffff; text-decoration: none;} 
