--- a/trunk/docs/hive.css
+++ b/trunk/docs/hive.css
@@ -13,10 +13,10 @@
     /*color: #D16587;*/
     /*background:black;*/
 }
-A {color: #488AC7; text-decoration: none; } 
-A:HOVER {color : #ffffff; text-decoration: none;} 
-A:ACTIVE {color : #0066cc;} 
+A {color: blue; text-decoration: none; } 
+A:HOVER {color : red; text-decoration: none;} 
+A:ACTIVE {color : blue;} 
 /*A:VISITED {color :#7E2217;}*//*red*/
 /*A:VISITED {color :#C11B17;} *//*firebrick*/
 
-A:VISITED {color :#488AC7;}
+A:VISITED {color :blue;}
